--- a/posts/4-연산자.mdx
+++ b/posts/4-연산자.mdx
@@ -1,3 +1,8 @@
+---
+title: '4. 연산자'
+date: '2022-08-21'
+---
+
 ## 1. 연산자와 피연산자
 
 연산자는 하나 이상의 표현식을 대상으로 `산술, 할당, 비교, 논리, 타입, 지수` 연산을 수행하여 하나의 값을 만든다.
