feat(PostMetaData):  썸네일의 이미지 경로인 thumbnail 프로퍼티 추가

--- a/posts/헝가리안_표기법을_사용하지_말아야_할_이유.mdx
+++ b/posts/헝가리안_표기법을_사용하지_말아야_할_이유.mdx
@@ -2,6 +2,7 @@
 title: 'TypeScript에서 interface 이름을 정할 때 헝가리안 표기법을 사용하지 말아야 할 이유 + 대안'
 category: 'tech'
 date: '2022-08-14'
+thumbnail: '/thumbnails/헝가리안표기법을사용하지말아야할이유.png'
 ---
 
 많은 사람들이 `interface` 선언할 때 `I` 를 인터페이스명 맨 앞에 붙이곤 한다.
