style: image 설명하는 텍스트의 스타일 설정
img 바로 뒤에오는 em의 스타일 설정

--- a/posts/헝가리안_표기법을_사용하지_말아야_할_이유.mdx
+++ b/posts/헝가리안_표기법을_사용하지_말아야_할_이유.mdx
@@ -26,7 +26,7 @@ I는 interface, C는 Class, … 등등
 
 **하지만**
 
-![타입_알려주는_vscode](/posts/타입_알려주는_vscode.jpg)
+![타입_알려주는_vscode](/posts/타입_알려주는_vscode.jpg)_친절한 vscode_
 
 요즘은 마우스 갖다 대면 타입을 바로 알 수 있으므로 쓸모가 없는 표기법이 된다.
 
