refactor: postId를 한글에서 영어로 수정

--- a/posts/jsdeepdive-control-statement.mdx
+++ b/posts/jsdeepdive-control-statement.mdx
@@ -1,8 +1,8 @@
 ---
-title: '5. 제어문'
+title: '제어문'
 category: 'jsdeepdive'
 date: '2022-08-22'
-thumbnail: '/thumbnails/js-제어문.png'
+thumbnail: '/thumbnails/jsdeepdive-control-statement.png'
 ---
 
 ## 1. 제어문이란?
