--- a/posts/jsdeepdive-expression_statement.mdx
+++ b/posts/jsdeepdive-expression_statement.mdx
@@ -1,8 +1,8 @@
 ---
-title: '2. 표현식과 문'
+title: '표현식과 문'
 category: 'jsdeepdive'
 date: '2022-08-19'
-thumbnail: '/thumbnails/js-표현식과문.png'
+thumbnail: '/thumbnails/jsdeepdive-expression_statement.png'
 ---
 
 ## 1. 값
