--- a/posts/jsdeepdive-operator.mdx
+++ b/posts/jsdeepdive-operator.mdx
@@ -1,8 +1,8 @@
 ---
-title: '4. 연산자'
+title: '연산자'
 category: 'jsdeepdive'
 date: '2022-08-21'
-thumbnail: '/thumbnails/js-연산자.png'
+thumbnail: '/thumbnails/jsdeepdive-operator.png'
 ---
 
 ## 1. 연산자와 피연산자
