--- a/posts/retrospect-2022-07.mdx
+++ b/posts/retrospect-2022-07.mdx
@@ -2,7 +2,7 @@
 title: '2022년 7월 회고'
 category: 'retrospect'
 date: '2022-08-03'
-thumbnail: '/thumbnails/2022년7월회고.png'
+thumbnail: '/thumbnails/retrospect-2022-07.png'
 ---
 
 ## 7월에 있었던 일
