--- a/posts/jsdeepdive-coercion_short-circuit-evaluation.mdx
+++ b/posts/jsdeepdive-coercion_short-circuit-evaluation.mdx
@@ -1,8 +1,8 @@
 ---
-title: '6. 타입 변환과 단축 평가'
+title: '타입 변환과 단축 평가'
 category: 'jsdeepdive'
 date: '2022-08-27'
-thumbnail: '/thumbnails/js-타입변환과단축평가.png'
+thumbnail: '/thumbnails/jsdeepdive-coercion_short-circuit-evaluation.png'
 ---
 
 ## 1. 타입 변환이란?
