--- a/posts/jsdeepdive-dataType.mdx
+++ b/posts/jsdeepdive-dataType.mdx
@@ -1,8 +1,8 @@
 ---
-title: '3. 데이터 타입'
+title: '데이터 타입'
 category: 'jsdeepdive'
 date: '2022-08-20'
-thumbnail: '/thumbnails/js-dataType.png'
+thumbnail: '/thumbnails/jsdeepdive-dataType.png'
 ---
 
 ## 1. 데이터 타입
