--- a/posts/jsdeepdive-variables.mdx
+++ b/posts/jsdeepdive-variables.mdx
@@ -2,7 +2,7 @@
 title: '변수'
 category: 'jsdeepdive'
 date: '2022-08-17'
-thumbnail: '/thumbnails/js-변수.png'
+thumbnail: '/thumbnails/jsdeepdive-variables.png'
 ---
 
 ## 1. 변수 선언
